# mrcp-baidu-tts

./: .gitignore  README.md
unimrcp-1.5.0/: configure.ac
unimrcp-1.5.0/plugins/: Makefile.am
unimrcp-1.5.0/plugins/baidu-synth/: Makefile.am
unimrcp-1.5.0/plugins/baidu-synth/src/: baidu_synth_engine.c
unimrcp-1.5.0/plugins/xfyun-synth/src/: xfyun_synth_engine.c
